2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘chaccess’ from global state of rcs(1).

	* rcs.c (struct admin_closure): Add members ‘accesses’, ‘tp_access’.
	(chaccess): Delete var.
	(getchaccess): Take ‘dc’, not ‘tp’; use ‘dc->tp_access’.
	(getaccessor): Take ‘dc’, not ‘tp’; update calls to ‘getchaccess’.
	(doaccess): Take arg ‘dc’; use ‘dc->accesses’.
	(main): Delete auto var ‘tp_chacc’; update
	calls to ‘getaccessor’, ‘getchaccess’, ‘doaccess’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove repo-state-change vars from global state of rcs(1).

	* rcs.c (struct admin_closure): Add members
	‘headstate’, ‘headstate_changed_p’, ‘states’, ‘tp_state’.
	(headstate, chgheadstate, statelst): Delete vars.
	(getstates): Take ‘dc’, not ‘tp’; use ‘dc->tp_state’,
	‘dc->headstate_changed_p’, ‘dc->headstate’.
	(main): Delete auto var ‘tp_state’; update call to ‘getstates’;
	use ‘dc.headstate_changed_p’, ‘dc.headstate’, ‘dc.states’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘revnum’ from global state of rcs(1).

	* rcs.c (revnum): Delete var.
	(removerevs, doassoc, setlock, dolocks)
	(domessages, rcs_setstate): Add auto var ‘numrev’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move rcs.c ‘main’ auto var ‘deltas’ into the admin closure.

	U ≡ "Take ‘dc’, not ‘tp_deltas’";
	V ≡ "U; use ‘&dc->deltas’".
	* rcs.c (struct admin_closure): Add member ‘deltas’.
	(setlock): V.
	(dolocks): Likewise; update calls to ‘setlock’.
	(domessages, rcs_setstate): V.
	(main): Delete auto var ‘deltas’; update calls to ‘dolocks’,
	‘domessages’, ‘rcs_setstate’; use ‘dc.deltas’.

2011-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move a rcs.c ‘main’ auto var into a structure.

	* rcs.c (struct admin_closure): New.
	(main): Replace auto var ‘exitstatus’ with ‘dc’;
	update calls to ‘cleanup’; use ‘dc.rv’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove {force,lock,mtime}flag from global state of co(1).
